// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputCheckbox> renders the correct markup 1`] = `
<span
  className="Van-InputCheckbox"
>
  <input
    className="Van-InputCheckbox-input"
    type="checkbox"
  />
  <span
    className="Van-InputCheckbox-styled"
  />
</span>
`;

exports[`<InputCheckbox> renders with specific attributes 1`] = `
<span
  className="Van-InputCheckbox"
>
  <input
    className="Van-InputCheckbox-input"
    data-id="0"
    type="checkbox"
    value="on"
  />
  <span
    className="Van-InputCheckbox-styled"
  />
</span>
`;

exports[`<InputCheckbox> renders with specific className 1`] = `
<span
  className="Van-InputCheckbox my-class"
>
  <input
    className="Van-InputCheckbox-input"
    type="checkbox"
  />
  <span
    className="Van-InputCheckbox-styled"
  />
</span>
`;
